force-app/main/default/objects/Gift_Signup__c/Gift_Signup__c.object-meta.xml
<CustomObject>
    <label>Gift Signup</label>
    <nameField>
        <label>Gift Signup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gift Signups</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>