force-app/main/default/objects/Gift_Signup__c/fields/Exchange__c.field-meta.xml
<CustomField>
    <fullName>Exchange__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Exchange</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must be an active exchange. Please contact exchange admin.</errorMessage>
        <filterItems>
            <field>Exchange__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Exchange__c</referenceTo>
    <relationshipLabel>Gift Signups</relationshipLabel>
    <relationshipName>Gift_Signups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>