force-app/main/default/objects/Gift_Signup__c/fields/Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Hobbies__c</fullName>
    <label>Hobbies and Interests</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>