force-app/main/default/objects/Gift_Signup__c/fields/Wishlist__c.field-meta.xml
<CustomField>
    <fullName>Wishlist__c</fullName>
    <label>Wishlist</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>