force-app/main/default/objects/Gift_Signup__c/validationRules/no_regression.validationRule-meta.xml
<ValidationRule>
    <fullName>no_regression</fullName>
    <active>true</active>
    <errorConditionFormula>CASE(  Status__c  , 
&quot;Free Agent&quot;,1, 
&quot;Assigned&quot;,2, 
&quot;Shipped!&quot;,3, 
&quot;Received&quot;,4,0) 
&lt; 
CASE(PRIORVALUE(Status__c) , 
&quot;Free Agent&quot;,1, 
&quot;Assigned&quot;,2, 
&quot;Shipped!&quot;,3, 
&quot;Received&quot;,4,0)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>&quot;You can never go back&quot; - Daphne Du Maurier</errorMessage>
</ValidationRule>