force-app/main/default/objects/Gift_Signup__c/listViews/My_Sign_Ups.listView-meta.xml
<ListView>
    <fullName>My_Sign_Ups</fullName>
    <columns>NAME</columns>
    <columns>Exchange__c</columns>
    <columns>Ship_To_Address__c</columns>
    <columns>Wishlist__c</columns>
    <columns>Hobbies__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Sign Ups</label>
</ListView>