force-app/main/default/objects/Gift_Signup__c/listViews/Signups_by_Exchange.listView-meta.xml
<ListView>
    <fullName>Signups_by_Exchange</fullName>
    <columns>NAME</columns>
    <columns>Exchange__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Gift Status</label>
</ListView>